# stock-market-explorer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
stock_market_explorer/: exceptions.py  stock_data_retriever.py
streamlit_app/: app.py
tests/: test_app.py  test_stock_data_retriever.py
