[tool.poetry]
name = "stock-market-explorer"
version = "0.1.0"
description = ""
authors = ["Stephen Nicholson <stephennicholson14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
streamlit = "^1.33.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"
pylint = "^3.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
